# shortener

./: .gitignore  README.md  pyproject.toml
api/: const.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py
api/tests/: test_api.py  test_models.py  test_views.py
shortener/: settings.py
