[tool.poetry]
name = "shortener"
version = "0.1.0"
description = ""
authors = ["Marek-Chalabis <chalabismarek@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.1"
djangorestframework = "^3.14.0"
pytest-django = "^4.5.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"



[tool.pytest.ini_options]
# divide into production and develop
DJANGO_SETTINGS_MODULE = "shortener.settings"
python_files = "test_*.py"